[package]
name = "starter"
version = "0.0.1"
authors = ["doug <linderd@iinet.net.au>"]

[lib]
name = "foo"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serialport = "3.3.0"
clap = "2.33.3"
byteorder = "1.3.4"
chrono = "0.4.19"
csv = "1.1.3"
string = "0.2.1"
crc8 = "0.1.1"